feat: Amélioration majeure du système d'actualités sportives
- Suppression complète des fichiers de test et HTML inutiles
- Amélioration du système d'images intelligent avec détection par sport
- Correction du bug cyclisme->montagne pour éviter les images inappropriées
- Amélioration de la détection football pour Ligue des Champions et compétitions européennes
- Implémentation d'un filtre strict: articles avec vraies images et liens valides uniquement
- Ajout d'un système anti-doublons robuste basé sur les mots clés des titres
- Création d'endpoints pour afficher le contenu complet des articles
- Correction des erreurs de compilation et de syntaxe Java
- Nettoyage de la base de données (suppression de 31 articles avec images générées)
- Amélioration de la gestion des URLs d'articles pour éviter les pages d'erreur example.com

Résultat: Un contenu sportif de qualité avec images pertinentes, sans doublons, et accès complet aux articles